# cpp-scaffold

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp_scaffold  vcpkg.json
include/: project_header.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
